[package]
name = "todo-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Simple To-Do CLI program written in Rust"
authors = ["mateisr"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.8"
dialoguer = "0.11.0"